Fixed unnessary scrollbar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -139,7 +139,7 @@ p {
 .main {
     display: block;
     height: -webkit-fill-available;
-    overflow: scroll;
+    overflow: auto;
     width: -webkit-fill-available;
 }
 
